Project_7/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Specifies the ingress class
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: example.com  # Main API host
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
          - path: /payment
            pathType: Prefix
            backend:
              service:
                name: payment-service
                port:
                  number: 8001
          - path: /download
            pathType: Prefix
            backend:
              service:
                name: download-service
                port:
                  number: 8002
    - host: web.example.com  # Client host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 5173
